--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,32 @@
 {
   "name": "My Notes",
   "short_name": "My Notes",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#131318",
   "theme_color": "#c0c1ff",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "img/icons/manifest-icon-192.maskable.png",
+      "src": "./img/icons/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "img/icons/manifest-icon-192.maskable.png",
+      "src": "./img/icons/manifest-icon-192.maskable.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "img/icons/manifest-icon-512.maskable.png",
+      "src": "./img/icons/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "img/icons/manifest-icon-512.maskable.png",
+      "src": "./img/icons/manifest-icon-512.maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
